--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.SEND_SMS"/>
     <!-- Features -->
     <uses-feature
         android:name="android.hardware.bluetooth_le"
@@ -45,10 +46,6 @@
             android:enabled="true"
             android:exported="true" />
 
-        <activity
-            android:name=".activities.LoginActivity"
-            android:label="@string/title_activity_login" />
-        <activity android:name=".activities.StartActivity"></activity>
     </application>
 
 </manifest>
